app/styles/tooltips.scss
.modal-header {
    padding: 10px 15px;
    border-bottom: 1px solid transparent;
    min-height: 16.85px;
    display: block;
    width: 100%;
    float: left;
}
a.tooltips-left, button.tooltips-left, button[disabled].tooltips-left {
  position: relative;
  display: inline;
}
.cI:before{
   content: "Only initial character case insensitive";
}
.CS:before{
   content: "Entire term case sensitive";
}
.ci:before{
   content: "Entire term case insensitive";
}
 button.tooltips-left.normal-case span, button.tooltips-right.normal-case span{text-transform:none!important}
.tab-pane .btn-round.btn[disabled] {
    pointer-events: visibleFill!important;
    opacity: 1.0;
}
.tab-pane .btn-round.btn[disabled] {
    pointer-events: visibleFill;
    opacity: 1.0;
}
.tab-pane .btn-round.btn[disabled]:hover {
    background-color: #EF5350;
    color: #fff;
}
a.tooltips-left span, button.tooltips-left span, button[disabled].tooltips-left span {
  position: absolute;
  width:auto;
  min-width:140px;
  color: #FFFFFF;
  background: #000000;
padding:10px;
font-size:11px;
  line-height: 12px;
  text-align: center;
  visibility: hidden;
  border-radius: 6px;
      font-family: 'Roboto', sans-serif;
	  
}
.tooltips-left.feedbacktooltips span{  min-width:50px;padding:3px;}
.lowercase{text-transform:lowercase; float:left;}
.tooltips-left span.green{background-color: #81C784!important;}
.tooltips-left span.red{background-color: #E57373!important;}
a.tooltips-left span:after, button.tooltips-left span:after {
  content: '';
  position: absolute;
  top: 50%;
  left: 100%;
  margin-top: -8px;
  width: 0; height: 0;
  border-left: 8px solid #000000;
  border-top: 8px solid transparent;
  border-bottom: 8px solid transparent;
}
.tooltips-left span.green:after {

  border-left: 8px solid #81C784!important;
  border-top: 8px solid transparent;
  border-bottom: 8px solid transparent;
}
.tooltips-left span.red:after {

  border-left: 8px solid #E57373!important;
  border-top: 8px solid transparent;
  border-bottom: 8px solid transparent;
}
a:hover.tooltips-left span, button:hover.tooltips-left span, button[disabled]:hover.tooltips-left span {
  visibility: visible;
  opacity: 1.0;
  right: 100%;
  top: 50%;
  margin-top: -15px;
  margin-right: 5px;

}
a.tooltips-left, button.tooltips-left, button[disabled]:hover.tooltips-left{
  position: relative;
  display: inline;
}

a.tooltips-right, button.tooltips-right, button[disabled]:hover.tooltips-right{
  position: relative;
  display: inline;
}
a.tooltips-right span, button.tooltips-right span, button[disabled].tooltips-right span  {
  position: absolute;
  min-width:160px;
  color: #FFFFFF;
  background: #474747;
  padding:10px;
  font-size:11px;
  line-height: 12px;
  text-align: center;
  visibility: hidden;
  border-radius: 6px;
}
a.tooltips-right span:after, button.tooltips-right span:after, button[disabled].tooltips-right span:after {
  content: '';
  position: absolute;
  top: 50%;
  right: 100%;
  margin-top: -8px;
  width: 0; height: 0;
  border-right: 8px solid #474747;
  border-top: 8px solid transparent;
  border-bottom: 8px solid transparent;
}
.btn[disabled]{pointer-events:visibleFill;opacity:1.0}
a:hover.tooltips-right span, button:hover.tooltips-right span, button[disabled]:hover.tooltips-right span  {
  visibility: visible;
  opacity: 1;
  left: 100%;
  top: 50%;
  margin-top: -15px;
  margin-left: 40px;

}
/* bottom */
a.tooltips-btm, button.tooltips-btm {
  position: relative;
  display: inline;
}
a.tooltips-btm span, button.tooltips-btm span {
  position: absolute;
 font-size:11px;
  color: #FFFFFF;
  background: #000000;
 
  text-align: center;
  visibility: hidden;
  border-radius: 6px;
}
a.tooltips-btm span:after, button.tooltips-btm span:after {
  content: '';
  position: absolute;
  bottom: 100%;
  left: 50%;
  margin-left: -8px;
  width: 0; height: 0;
  border-bottom: 8px solid #000000;
  border-right: 8px solid transparent;
  border-left: 8px solid transparent;
}
a:hover.tooltips-btm span, button:hover.tooltips-btm span {
  visibility: visible;
  opacity: 0.8;
  top: 30px;
  left: 70%;
  margin-left: -56px;
  z-index: 999;
}/* Scss Document */

/* notifications */
 .no-gutter {
    padding-left: 0px;
    padding-right: 0px;
  }

  .loader {
    font-size: 10px;
    margin: 50px auto;
    text-indent: -9999em;
    width: 11em;
    height: 11em;
    border-radius: 50%;
    background: #ffffff;
    background: -moz-linear-gradient(left, #ffffff 10%, rgba(255, 255, 255, 0) 42%);
    background: -webkit-linear-gradient(left, #ffffff 10%, rgba(255, 255, 255, 0) 42%);
    background: -o-linear-gradient(left, #ffffff 10%, rgba(255, 255, 255, 0) 42%);
    background: -ms-linear-gradient(left, #ffffff 10%, rgba(255, 255, 255, 0) 42%);
    background: linear-gradient(to right, #ffffff 10%, rgba(255, 255, 255, 0) 42%);
    position: relative;
    -webkit-animation: load3 1.4s infinite linear;
    animation: load3 1.4s infinite linear;
    -webkit-transform: translateZ(0);
    -ms-transform: translateZ(0);
    transform: translateZ(0);
  }

  .loader:before {
    width: 50%;
    height: 50%;
    background: #ffffff;
    border-radius: 100% 0 0 0;
    position: absolute;
    top: 0;
    left: 0;
    content: '';
  }

  .loader:after {
    background: #0dc5c1;
    width: 75%;
    height: 75%;
    border-radius: 50%;
    content: '';
    margin: auto;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
  }

  @-webkit-keyframes load3 {
    0% {
      -webkit-transform: rotate(0deg);
      transform: rotate(0deg);
    }
    100% {
      -webkit-transform: rotate(360deg);
      transform: rotate(360deg);
    }
  }

  @keyframes load3 {
    0% {
      -webkit-transform: rotate(0deg);
      transform: rotate(0deg);
    }
    100% {
      -webkit-transform: rotate(360deg);
      transform: rotate(360deg);
    }
  }

  .last {
    /*    margin-bottom:37px;*/
    height: auto;
  }

  .sca-resizable {
    margin-right: 10px;
    display: inline-block;
  }

  .sca-resize {
    position: relative;
    left: -50px;
    height: 100vh;
    width: 5px;
    background-color: red;
  }

  .sca-drag-target, .sca-drag-hover {
    background-color: transparent !important;
    border: none !important;
  }

  .sca-drag-hover textarea {

    border: 1px dashed #fff !important;
    background: #00a6e5 !important;
    color: #fff !important;
  }

  .sca-drag-target textarea {

    border: 1px dashed #9f9f9f !important;
    background: #dedede !important;
  }

  .sca-relgroup-drag-target, .sca-relgroup-drag-hover {

    border: 1px dashed #fff !important;
    background: #00a6e5 !important;
    color: #fff !important;
  }

  .sca-drag-handle {
    background-color: red;
  }

  .transparent {
    background-color: transparent;
  }

  .wordbreak {
    word-wrap: break-word
  }
/* warnings */
.text-center, .text-center p {text-align:center; margin-bottom:0px; }
.alert.alert-danger .alert-text {font-size:13px; font-weight:400; margin-top:10px;}
.alert-danger .md-warning{background-color:transparent!important; font-size:32px;}

